css: Change comment border style

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2885,9 +2885,7 @@ label.inline-list {
                 }
 
                 &:hover {
-                    .meta-info .act-row {
-                        opacity: 1;
-                    }
+                  box-shadow: 2px 2px 1px 0 rgb(220, 220, 220)
                 }
                 .meta-info {
                     height:22px;
@@ -2899,8 +2897,6 @@ label.inline-list {
                     .yobicon-comment {vertical-align: middle;}
 
                     .act-row {
-                        transition: opacity fadeIn 1s;
-                        opacity: .3;
                         overflow: hidden;
                         i {
                             font-size: 20px;
