--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3786,7 +3786,7 @@ label.issue-item-row {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    color: #999;
+    color: #2196f3;
     font-size:11px;
     .border-radius(6px);
 }
