--- a/app/views/code/history.scala.html
+++ b/app/views/code/history.scala.html
@@ -223,24 +223,42 @@ $(document).ready(function(){
         location.href = evt.val;
     });
 
+    var clipboard;
+
     // Copy CommitId
     $("#history").find(".btn-copy-commitId").each(function(i, el){
         var welBtnCopy = $(el);
 
         // zclip() works only in visible element
         welBtnCopy.on("mouseenter", function(){
-            if(!welBtnCopy.data("zclipped")){
-                welBtnCopy.data("zclipped", true);
-
-                $(this).zclip({
-                    "path": "@routes.Assets.at("javascripts/lib/jquery/ZeroClipboard.swf")",
-                    "copy": function(){
-                        return $(this).data("commitid");
-                    },
-                    "afterCopy": function(){
-                        $yobi.notify("@Messages("code.copyCommitId.copied")", 1000);
+            if (Clipboard && Clipboard.isSupported()) {
+                // Using clipboard.min.js if supports clipboard api.
+                if (clipboard) {
+                    clipboard.destroy(); // Destroy previous instance before locate new instance.
+                }
+                clipboard = new Clipboard(this, {
+                    text: function() {
+                        return $(welBtnCopy).data("commitid");
                     }
+                }).on('success', function(e) {
+                    $yobi.notify("@Messages("code.copyCommitId.copied")", 1000);
+                    e.clearSelection();
                 });
+            } else {
+                // Use zclipboard(Flash based) if not support clipboard api.
+                if (!welBtnCopy.data("zclipped")){
+                    welBtnCopy.data("zclipped", true);
+
+                    $(this).zclip({
+                        "path": "@routes.Assets.at("javascripts/lib/jquery/ZeroClipboard.swf")",
+                        "copy": function(){
+                            return $(this).data("commitid");
+                        },
+                        "afterCopy": function(){
+                            $yobi.notify("@Messages("code.copyCommitId.copied")", 1000);
+                        }
+                    });
+                }
             }
         });
     });
