--- a/app/views/issue/partial_massupdate.scala.html
+++ b/app/views/issue/partial_massupdate.scala.html
@@ -75,7 +75,7 @@
                             <span class="avatar-wrap smaller">
                                 <img src="@user.avatarUrl(32)" width="20" height="20">
                             </span>
-                            <strong class="name">@user.name</strong>
+                            <strong class="name">@user.getDisplayName</strong>
                             <span class="loginid"> <strong>@{"@"}</strong>@user.loginId</span>
                         </a>
                     </li>
