--- a/app/views/issue/partial_searchform.scala.html
+++ b/app/views/issue/partial_searchform.scala.html
@@ -63,7 +63,7 @@
                         }
                         data-avatar-url="@user.avatarUrl"
                         data-login-id="@user.loginId">
-                            @user.name
+                            @user.getDisplayName
                         </option>
                     }
                 </select>
