--- a/app/views/user/view.scala.html
+++ b/app/views/user/view.scala.html
@@ -53,6 +53,7 @@
                 </div>
                 <div class="whoami usf-group">
                     <span class="name">@user.name</span>
+                    <span class="name">@user.englishName</span>
                     <span class="loginid">@{"@"}@user.loginId</span>
                     @if(Application.SHOW_USER_EMAIL){
                         <span class="email">@user.email</span>
