--- a/app/views/issue/my_partial_list.scala.html
+++ b/app/views/issue/my_partial_list.scala.html
@@ -41,7 +41,7 @@
                 @if(!isAuthoredMeTab) {
                     @if(user.name) {
                         <a href="@routes.UserApp.userInfo(user.loginId)" class="infos-item infos-link-item" data-toggle="tooltip" data-placement="bottom" title="@user.loginId">
-                        @user.name
+                        @user.getDisplayName
                         </a>
                     } else {
                         <span class="infos-item">@Messages("issue.noAuthor")</span>
