--- a/app/views/issue/partial_list.scala.html
+++ b/app/views/issue/partial_list.scala.html
@@ -28,7 +28,7 @@
             }
             <div for="issue-@issue.id" class="issue-item-row">
                 <a href="@routes.UserApp.userInfo(user.loginId)" class="avatar-wrap mlarge hide-in-mobile" data-toggle="tooltip" data-placement="top" title="@user.loginId">
-                        <img src="@User.findByLoginId(issue.authorLoginId).avatarUrl(64)" alt="@user.name" width="32" height="32"/>
+                        <img src="@User.findByLoginId(issue.authorLoginId).avatarUrl(64)" alt="@user.getDisplayName" width="32" height="32"/>
                 </a>
                 <div class="title-wrap">
                     <a href="@routes.IssueApp.issue(project.owner, project.name, issue.getNumber)" class="title">
@@ -42,7 +42,7 @@
                 <div class="infos">
                     @if(user.name){
                         <a href="@routes.UserApp.userInfo(user.loginId)" class="infos-item infos-link-item" data-toggle="tooltip" data-placement="bottom" title="@user.loginId">
-                            @user.name
+                            @user.getDisplayName
                         </a>
                     } else {
                         <span class="infos-item">@Messages("issue.noAuthor")</span>
