--- a/app/views/organization/members.scala.html
+++ b/app/views/organization/members.scala.html
@@ -51,7 +51,7 @@
                     <a href="@routes.UserApp.userInfo(member.user.loginId)" class="avatar-wrap mlarge pull-left mr10">
                         <img src="@User.findByLoginId(member.user.loginId).avatarUrl" width="64" height="64">
                     </a>
-                    <div class="member-name">@member.user.name</div>
+                    <div class="member-name">@member.user.getDisplayName</div>
                     <div class="member-id">@{"@"}@member.user.loginId</div>
                     <div class="member-setting">
                         <div class="btn-group" data-name="roleof-@member.user.loginId">
@@ -99,7 +99,7 @@
                     </a>
                 </div>
                 <div class="pull-left" style="width: 60px;">
-                    <span><a href="@routes.UserApp.userInfo(user.loginId)"><strong>@user.name</strong></a></span>
+                    <span><a href="@routes.UserApp.userInfo(user.loginId)"><strong>@user.getDisplayName</strong></a></span>
                     <span>(@user.loginId)</span>
                     <button type="button" class="ybtn ybtn-info ybtn-mini blue enrollAcceptBtn" data-loginId="@user.loginId"><i class="yobicon-addfriend"></i>@Messages("button.add")</button>
                 </div>
