--- a/app/views/user/partial_postings.scala.html
+++ b/app/views/user/partial_postings.scala.html
@@ -40,7 +40,7 @@
     <div class="infos">
         @if(user.name){
             <a href="@routes.UserApp.userInfo(user.loginId)" class="infos-item infos-link-item" data-toggle="tooltip" data-placement="top" title="@user.loginId">
-                @user.name
+                @user.getDisplayName
             </a>
         } else {
             <span class="infos-item">@Messages("post.noAuthor")</span>
