--- a/app/views/common/commentCount.scala.html
+++ b/app/views/common/commentCount.scala.html
@@ -8,6 +8,4 @@
 <a href="@linkUrl" class="comments-count @if(showColorAlways){comments-count-color}">
     <span class="count-groups item-icon">
         <i class="yobicon-comment2"></i>
-    </span>
-    <span class="count-groups item-count">@countNumber</span>
-</a>
+    </span><span class="count-groups item-count">@countNumber</span></a>
