--- a/app/views/common/voteCount.scala.html
+++ b/app/views/common/voteCount.scala.html
@@ -8,6 +8,4 @@
 <a href="@linkUrl" class="vote-count @if(showColorAlways){vote-color}">
     <span class="count-groups item-icon">
         <i class="yobicon-hearts"></i>
-    </span>
-    <span class="count-groups item-count strong">@countNumber</span>
-</a>
+    </span><span class="count-groups item-count strong">@countNumber</span></a>
