--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -226,6 +226,8 @@ input[type=number]::-webkit-outer-spin-button {
 .margin-right-5  { margin-right:5px;  }
 .margin-right-i2 { margin-right:-2px !important; }
 
+.font12 { font-size: 12px; }
+
 .no-border{ border: none !important; }
 .reverb {
   unicode-bidi: bidi-override;
