pull-request: Show target branch at list
See: Yona Github issue #295

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7025,8 +7025,20 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     color: #e95e01;
     margin-right: 5px;
 }
+
 .subtask-number {
     color: darkgrey;
     font-size: 12px;
     margin-right: 5px;
+}
+
+.to-branch {
+    border: 1px solid;
+    padding: 0 5px;
+}
+
+.to-default-branch {
+    border: 1px solid #03a9f4;
+    padding: 0 5px;
+    color: #03a9f4;
 }
