css: Remove border of comment and voter icon at Subtask list

--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -82,7 +82,7 @@
                         <span class="state-label open"></span>
                         <a href="@routes.IssueApp.issue(childIssue.project.owner, childIssue.project.name, childIssue.getNumber)">
                             <span class="item-name"><span class="subtask-number">#@childIssue.getNumber</span> @childIssue.title@if(childIssue.assignee != null) { - @childIssue.assignee.user.getPureNameOnly}</span></a>
-                        <span class="font12">@common.commentAndVoterPairDisplay(childIssue, project)</span>
+                        <span class="font12 no-border-at-child">@common.commentAndVoterPairDisplay(childIssue, project)</span>
                     </div>
                 }
                 @for(childIssue <- closedChildIssues) {
@@ -90,7 +90,7 @@
                         <span class="state-label closed"><i class=" yobicon-checkmark"></i></span>
                         <a href="@routes.IssueApp.issue(childIssue.project.owner, childIssue.project.name, childIssue.getNumber)">
                             <span class="item-name"><span class="subtask-number">#@childIssue.getNumber</span> @childIssue.title@if(childIssue.assignee != null){ - @childIssue.assignee.user.getPureNameOnly}</span></a>
-                        <span class="font12">@common.commentAndVoterPairDisplay(childIssue, project)</span>
+                        <span class="font12 no-border-at-child">@common.commentAndVoterPairDisplay(childIssue, project)</span>
                     </div>
                 }
             </div>
