--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7042,3 +7042,9 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     padding: 0 5px;
     color: #03a9f4;
 }
+
+.no-border-at-child {
+    .item-count-groups {
+        border: none !important;
+    }
+}
