i18n: Fix name rendering bug in mail contents
It was little bit difficult to modify existed codes to support
proper name renderin for each users whose have their own lang.

I don't want to be a prayer, but I hope it will work properly.

If it isn't, mail sending will stop.

--- a/app/views/code/diff.scala.html
+++ b/app/views/code/diff.scala.html
@@ -19,7 +19,7 @@ List[playRepository.FileDiff],path:String)
 
 @autoLinkedMsg(msg:String) = @{
     val autoLinkRenderer = new AutoLinkRenderer(msg, project)
-    autoLinkRenderer.render()
+    autoLinkRenderer.render(null)
 }
 
 @projectLayout(Messages("code.commits") + " @" + commit.getId, project, utils.MenuType.CODE) {
