subtask: Change selected subtask style

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6810,7 +6810,6 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         font-size: 14px;
         padding: 3px;
         .item-name {
-            background-color: white;
             vertical-align: middle;
         }
         .number {
@@ -7046,5 +7045,14 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 .no-border-at-child {
     .item-count-groups {
         border: none !important;
+    }
+}
+
+.child-issues {
+    .selected-child {
+        font-weight: bold;
+        border: 1px solid #ddd;
+        background-color: #F5F5F5;
+        border-radius: 4px;
     }
 }
