--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -78,7 +78,7 @@
                 }
                 <hr class="parent-issue-delimeter"/>
                 @for(childIssue <- openChildIssues) {
-                    <div class="issue-item @if(childIssue.id == issue.id){bold}">
+                    <div class="issue-item @if(childIssue.id == issue.id){selected-child}">
                         <span class="state-label open"></span>
                         <a href="@routes.IssueApp.issue(childIssue.project.owner, childIssue.project.name, childIssue.getNumber)">
                             <span class="item-name"><span class="subtask-number">#@childIssue.getNumber</span> @childIssue.title@if(childIssue.assignee != null) { - @childIssue.assignee.user.getPureNameOnly}</span></a>
@@ -86,7 +86,7 @@
                     </div>
                 }
                 @for(childIssue <- closedChildIssues) {
-                    <div class="issue-item @if(childIssue.id == issue.id){bold}">
+                    <div class="issue-item @if(childIssue.id == issue.id){selected-child}">
                         <span class="state-label closed"><i class=" yobicon-checkmark"></i></span>
                         <a href="@routes.IssueApp.issue(childIssue.project.owner, childIssue.project.name, childIssue.getNumber)">
                             <span class="item-name"><span class="subtask-number">#@childIssue.getNumber</span> @childIssue.title@if(childIssue.assignee != null){ - @childIssue.assignee.user.getPureNameOnly}</span></a>
