--- a/app/views/help/markdown.scala.html
+++ b/app/views/help/markdown.scala.html
@@ -89,18 +89,18 @@ http://yobi.io/
             <div class="row-fluid markdwon-syntax-wrap">
                 <div class="span6 markdwon-syntax">
 <pre>
-* Red
+- Red
     1. White
     2. Blue
-* Green.
+- Green.
 </pre>
                 </div>
                 <div class="span6">
                     <div class="markdown-wrap"   markdown="true">
-* Red
+- Red
     1. White
     2. Blue
-* Green
+- Green
                     </div>
                 </div>
             </div>
