two-column-mode: Change css style to prevent mis-arragement

--- a/app/views/common/twoColumnModeCheckboxArea.scala.html
+++ b/app/views/common/twoColumnModeCheckboxArea.scala.html
@@ -6,14 +6,7 @@
 **@
 @(requireLeftMargin: Boolean = true)
 
-@additionalCssForLeftMargin = @{
-    if(requireLeftMargin) {
-        "pull-left absoluteAndLeftMargin"
-    } else {
-        ""
-    }
-}
-<div class="@additionalCssForLeftMargin two-column-icon mr10 hide-in-mobile" id="two-column-mode-checkbox" title='@Messages("common.two.column.mode")' data-content='@Messages("common.two.column.mode.desc")'>
+<div class="two-column-icon mr10 hide-in-mobile" id="two-column-mode-checkbox" title='@Messages("common.two.column.mode")' data-content='@Messages("common.two.column.mode.desc")'>
     <label class="checkbox">
         <input id="two-column-mode" type="checkbox"> <i class="yobicon-explorerwindow"></i>
     </label>
