webhook: Add help messages at webhook setting page

--- a/app/views/project/webhooks.scala.html
+++ b/app/views/project/webhooks.scala.html
@@ -27,6 +27,9 @@
           </div>
         </div>
         <button type="submit" class="ybtn ybtn-primary btn-submit">@Messages("project.webhook.add")</button>
+        <div>
+        @Html(Messages("project.webhook.help"))
+        </div>
       </form>
       }
 
